# embcli

./: .env.sample  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-cohere.yml  ci-gemini.yml  ci-jina.yml  ci-llamacpp.yml  ci-mistral.yml  ci-openai.yml  ci-sbert.yml  ci-voyage.yml  ci.yml  publish-to-testpypi.yml
docs/: mkdocs.yml
docs/docs/: basic_usage.md  index.md  model_plugins.md  release_notes.md  usage.md  vector_search.md
