[project]
name = "embcli"
version = "0.0.7-dev"
description = "embcli - CLI for Embeddings"
readme = "README.md"
authors = [{ name = "Tomoko Uchida", email = "tomoko.uchida.1111@gmail.com" }]
license = "Apache-2.0"
keywords = ["cli", "llm", "nlp", "embeddings"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Repository" = "https://github.com/mocobeta/embcli"

[tool.uv.workspace]
members = [
    "packages/embcli-core",
    "packages/embcli-openai",
    "packages/embcli-gemini",
    "packages/embcli-cohere",
    "packages/embcli-jina",
    "packages/embcli-mistral",
    "packages/embcli-voyage", "packages/embcli-sbert",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
